--- a/client/blazorecommerce/src/App.css
+++ b/client/blazorecommerce/src/App.css
@@ -1,3 +1,17 @@
 a {
-  all: unset;
+    all: unset;
+}
+
+.p-scrollpanel.custombar1 .p-scrollpanel-wrapper {
+    border-right: 10px solid var(--surface-ground);
+}
+
+.p-scrollpanel.custombar1 .p-scrollpanel-bar {
+    background-color: var(--primary-300);
+    opacity: 1;
+    transition: background-color 0.3s;
+}
+
+.p-scrollpanel.custombar1 .p-scrollpanel-bar:hover {
+    background-color: var(--primary-400);
 }
